# 3DP_Full_Cloud_Registration

./: CMakeLists.txt  ReadMe.md  registration_trial.cpp  robe.txt
data/bunny/: source.ply
data/dragon/: source.ply
data/vase/: source.ply
results/: bunny_merged_final.ply  bunny_transformation_final.txt  dragon_merged_final.ply  dragon_transformation_final.txt  vase_merged_final.ply  vase_transformation_final.txt
src/: Registration.cpp  Registration.h
